--- a/signUp.html
+++ b/signUp.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <div id="main-container" style="background-image: url('tea-bg.avif')" class="bg-no-repeat bg-cover mx-auto grid grid-cols-5 w-screen h-screen shadow-lg ">
+    <div id="main-container" style="background-image: url('teaBackground.avif')" class="bg-no-repeat bg-cover mx-auto grid grid-cols-5 w-screen h-screen shadow-lg ">
         
         <div  class=" col-span-3 p-8">
             <span class=" text-2xl font-medium text-white">chai<span class="text-yellow-400">holic</span></span>         
